# ys-compass

./: .env  .gitignore  .prettierrc  LICENSE  README.md  components.json  index.html  package.json  tsconfig.json  vite.config.ts
cfg/: tailwind.config.ts
resources/config/: en-us.yml
resources/lang/: en-us.yaml
src/: env.d.ts  main.tsx  utils.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  data.db-shm  data.db-wal  tauri.conf.json
src-tauri/.sqlx/: query-019ed297b5822657ac5e60b5256d95a2a2c365ece735d22e12e9a6386cc92365.json  query-3e7da08a3eca5cfff552fd9bb7895470ced5cdd56e024409bdf9fdf4d73df1d2.json  query-754b803d55f713f49ebae6148501b9cb1f5922da0744a0fb6c2ff67e31b06a9c.json  query-d8d7d31dfceb8f4f4f7735a5d450a4d59924c7986484474696e8882a0d8a9508.json  query-f13c3086822661143fd794b374ea747503e5fd7745458b8ed2e0a7d4fe727cf6.json  query-faf9f6a71b1533c6f87b5e18d1a35fb19534fc5974402eceffed67407eba784b.json
src-tauri/capabilities/: filesystem.json  migrated.json  store.json  window-common.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250217215123_initial_database.sql  20250218011416_launch_args.sql
src-tauri/src/: config.rs  database.rs  events.rs  main.rs  state.rs  system.rs  utils.rs  window.rs
src-tauri/src/app/: appearance.rs  game.rs  mod.rs  profile.rs  sniffer.rs
src-tauri/src/capabilities/: sniffer.rs
src-tauri/src/cli/: game.rs  mod.rs
src/backend/: Appearance.ts  Capabilities.ts  Global.ts  Language.ts  types.ts
src/hooks/: usePacketList.ts  useTranslation.ts  useTranslations.ts
src/hooks/appearance/: useBackground.ts  useColorScheme.ts
src/hooks/visualizer/: usePacketList.ts
src/ui/: App.tsx  Launcher.tsx  PacketVisualizer.tsx  ReplayViewer.tsx
src/ui/components/: AppStatusBar.tsx  JSONEditor.tsx
src/ui/components/common/: Button.tsx  Text.tsx
src/ui/components/launcher/: NavigationSideBar.tsx
src/ui/components/shad/: button.tsx  input.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  tooltip.tsx
src/ui/components/visualizer/: Packet.tsx
src/ui/css/: App.scss  Launcher.scss  global.scss
src/ui/css/components/: AppStatusBar.scss  Packet.scss
src/ui/pages/: PacketVisualizer.tsx
src/ui/pages/launcher/: Home.tsx  VersionManager.tsx
